# finops-sentinel

./: .env.example  .gitignore  LICENSE  README.md  SLACK_SETUP.md  alembic.ini  docker-compose.yml  implementation_plan.md  instructions.md  pyproject.toml  seed_localstack.py  test_slack.py
alembic/: env.py  script.py.mako
alembic/versions/: 08872b80af2e_notifications_and_remediations.py  c447645246ac_initial_schema.py
scripts/: seed_localstack.py
src/finops_sentinel/: __init__.py  bootstrap.py  config.py
src/finops_sentinel/adapters/aws/: gateway.py
src/finops_sentinel/adapters/aws/scanners/: ebs.py  ec2.py  eip.py
src/finops_sentinel/adapters/inbound/: cli.py  fastapi_app.py
src/finops_sentinel/adapters/notifications/: console.py  slack.py
src/finops_sentinel/adapters/persistence/: sqlalchemy_repo.py
src/finops_sentinel/domain/: models.py  rules.py  services.py
src/finops_sentinel/ports/: __init__.py  cloud.py  notifier.py  repository.py  scanner.py
tests/: conftest.py
tests/integration/: test_localstack_e2e.py
tests/unit/: test_aws_scanners.py  test_cli.py  test_fastapi.py  test_models.py  test_repository.py  test_rules.py  test_services.py
volume/cache/: machine.json
