[project]
name = "finops-sentinel"
version = "0.1.0"
description = "AWS Cost Optimization Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "slack_sdk>=3.20.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
sentinel = "finops_sentinel.adapters.inbound.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "moto[ec2]>=5.0.0",
    "httpx>=0.24.0",
    "pytest-asyncio>=0.21.0",
    "import-linter>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

# Ports & adapters enforcement: dependencies point inward.
# domain/ imports nothing external (pydantic only); adapters import domain,
# never the reverse; only bootstrap wires concrete adapters.
[tool.importlinter]
root_package = "finops_sentinel"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Domain must not depend on adapters or the composition root"
type = "forbidden"
source_modules = ["finops_sentinel.domain", "finops_sentinel.ports"]
forbidden_modules = ["finops_sentinel.adapters", "finops_sentinel.bootstrap"]

[[tool.importlinter.contracts]]
name = "Domain is pure Python (pydantic only)"
type = "forbidden"
source_modules = ["finops_sentinel.domain"]
forbidden_modules = [
    "boto3", "botocore", "fastapi", "sqlalchemy", "alembic",
    "slack_sdk", "typer", "rich", "uvicorn", "httpx",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
